# rust-rpc

./: Cargo.toml  build.rs  flake.nix  hello.rs  readme.md
protobuf/: hello.proto
src/: client.rs  server.rs
